--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# マイグレーション用ディレクトリ
+/migrations/*
+!/migrations/.gitkeep
