--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
